--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,6 @@ body {
   }
   
   .tab {
-    margin-right: 20px;
     cursor: pointer;
     padding: 10px 20px;
     border: 1px solid #ccc;
@@ -52,7 +51,8 @@ body {
   
   .product-card img {
     width: 100%;
-    height: auto;
+    /* height: auto; */
+    height: 62%;
     border-radius: 2px;
 
     border-bottom: 1px solid #eee;
