--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: white;
   }
   
   .container {
@@ -16,22 +16,51 @@ body {
     margin-bottom: 20px;
   }
   
+  
   .tabs {
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
-  }
-  
-  .tab {
-    cursor: pointer;
-    padding: 10px 20px;
-    border: 1px solid #ccc;
     border-radius: 5px;
+  }
+
+  .tab {
+    position: relative; 
+    width: 160px;
+    cursor: pointer;
+    padding: 10px 20px 10px 40px; 
+    background-color: #F2F2F2;
+    text-align: center;
   }
   
   .tab.active {
     background-color: #000000;
     color: #fff;
+    border-radius: 5px;
+  }
+  
+  .tab.active::before {
+    content: ""; 
+    position: absolute; 
+    left: 30%; 
+    top: 50%; 
+    transform: translateY(-50%); 
+    width: 20px; 
+    height: 20px; 
+    background-size: cover;
+    justify-content: center; 
+  }
+
+  .tab.active[data-category="men"]::before {
+    background-image: url(men_icon.png); 
+  }
+
+  .tab.active[data-category="women"]::before {
+    background-image: url(women_icon.png); 
+  }
+
+  .tab.active[data-category="kids"]::before {
+    background-image: url(kids_icon.png); 
   }
   
   .products {
@@ -51,11 +80,11 @@ body {
   
   .product-card img {
     width: 100%;
-    /* height: auto; */
     height: 62%;
     border-radius: 2px;
-
+    margin-bottom: 8px;
     border-bottom: 1px solid #eee;
+    object-fit: cover;
   }
   
   .product-info {
@@ -70,25 +99,51 @@ body {
     margin-bottom: 10px;
     display: inline-block;
   }
+
+  .product-title-vendor{
+    display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+
+  }
   
   .product-title {
+    font-size: 17px;
     font-weight: bold;
-    margin-bottom: 5px;
+    margin-right: 10px;
   }
+
+  .dot {
+    width: 4px; 
+    height: 4px; 
+    background-color: black;
+    border-radius: 50%; 
+    margin-right: 10px;
+}
   
   .product-vendor {
     color: #000000;
     margin-bottom: 5px;
   }
+
+  .price{
+    display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+
+
+  }
   
   .product-price {
-    font-size: 18px;
+    font-size: 15px;
     color: #000000;
+    margin-right: 8px;
   }
   
   .product-compare-price {
     text-decoration: line-through;
     color: #888;
+    margin-right: 8px;
   }
   
   .product-discount {
