--- a/styles.css
+++ b/styles.css
@@ -92,14 +92,14 @@ body {
   }
   
   .product-card {
-    position: relative; /* Add this to make the product card a positioning context */
+    position: relative; 
   }
   
   .product-tag {
-    position: absolute; /* Change to absolute positioning */
-    top: 10px; /* Adjust as needed */
-    left: 10px; /* Adjust as needed */
-    background-color: #FFFFFF; /* Adjust the color as needed */
+    position: absolute; 
+    top: 10px; 
+    left: 10px; 
+    background-color: #FFFFFF; 
     color: #000;
     padding: 5px 10px;
     border-radius: 2px;
